Update for Friday evening

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -79,7 +79,7 @@ Effective implementation of both HIV prevention and treatment requires strategic
 However, producing suitable estimates of relevant indicators is challenging.
 
 The data I use are recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
-An important feature of these data are the location and the time at which each datum was recorded
+An important feature of these data are the location and the time at which each observation was recorded
 While diverse, spatio-temporal data have distinctive commonalities which reoccur across settings.
 As a result, the work in this thesis makes use of, and aspires to contribute to the development of, modelling techniques from spatio-temporal statistics.
 
@@ -98,7 +98,7 @@ I evaluated the practical consequences of this concern [@howes2023beyond].
 * Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of acquiring HIV infection.
 The Global AIDS Strategy recommends prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
 I estimated the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assessed the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
-This work was included in the UNAIDS Global AIDS Update 2022 [@unaids2022global] and 2023 [@unaids2023global].
+This work was included in the UNAIDS Global AIDS Update 2022 and 2023.
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
 With this model in mind, I developed an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
 I applied the method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
