--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -34,7 +34,7 @@
 \item[GP] Gaussian Process.
 \item[CAR] Conditionally Auto-regressive.
 \item[ART] Antiretroviral Therapy.
-\item[SAE] Small Area Estimation.
+\item[SAE] Small-Area Estimation.
 \item[GMRF] Gaussian Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
 \item[GMRF] Gaussian Markov Random Field.
