--- a/references.bib
+++ b/references.bib
@@ -1468,3 +1468,21 @@ doi = {10.1201/9781420072884-c30}
   publisher={NIH Public Access}
 }
 
+@book{bernardo2001bayesian,
+  title={Bayesian theory},
+  author={Bernardo, Jos{\'e} M and Smith, Adrian FM},
+  year={2001},
+  publisher={John Wiley \& Sons}
+}
+
+@article{dempster1977maximum,
+  title={Maximum likelihood from incomplete data via the EM algorithm},
+  author={Dempster, Arthur P and Laird, Nan M and Rubin, Donald B},
+  journal={Journal of the royal statistical society: series B (methodological)},
+  volume={39},
+  number={1},
+  pages={1--22},
+  year={1977},
+  publisher={Wiley Online Library}
+}
+
